feat: Add styles, tokens and mixins.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <skio-root></skio-root>
+    <sek-root></sek-root>
   </body>
 </html>
